--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.7
   google_fonts: ^6.1.0
   provider:
+  blurrycontainer: ^1.0.2
 
 dev_dependencies:
   flutter_test:
