--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider:
   blurrycontainer: ^1.0.2
   percent_indicator: ^4.2.3
+  readmore: ^2.2.0
 
 dev_dependencies:
   flutter_test:
