--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   blurrycontainer: ^1.0.2
   percent_indicator: ^4.2.3
   readmore: ^2.2.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
