--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   percent_indicator: ^4.2.3
   readmore: ^2.2.0
   equatable: ^2.0.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
