Day 29 and 30 -> assets added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   equatable: ^2.0.5
   intl: ^0.18.1
   carousel_slider: ^4.2.1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
